README.md added

--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsdom": "^27.1.0",
-    "mongoose": "^8.19.2",
-    "xss-clean": "^0.1.4"
+    "mongoose": "^8.19.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
